Fix java.sql.Date issue